<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:background="@drawable/item_background"
    android:padding="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_history_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/article_image"
        android:src="@drawable/ic_baseline_img"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerRadius16dp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_history_image"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/date"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/btn_delete" />

    <TextView
        android:id="@+id/tv_diagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date"
        android:layout_toEndOf="@id/iv_history_image"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/diagnosis_result_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/btn_delete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_history_image"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/in_full"
        android:layout_marginTop="4dp"
        android:textStyle="italic"
        android:layout_below="@id/tv_diagnosis"
        android:layout_toStartOf="@id/btn_delete" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_baseline_delete" />
</RelativeLayout>
