<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:background="@drawable/item_background"
    android:padding="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_article_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/article_image"
        android:src="@drawable/ic_baseline_img"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerRadius16dp" />

    <TextView
        android:id="@+id/tv_article_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_article_image"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tv_article_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_article_title"
        android:layout_toEndOf="@id/iv_article_image"
        android:layout_marginStart="16dp"
        android:text="@string/desc"
        android:textSize="14sp" />
</RelativeLayout>
